tests/paczka1/small_fuzzy/91069048.err
Error in line 2: B2b2CMASfr S790 2,5
Error in line 5: 8V3BjLv S790 73,7
Error in line 9: 8V3BjLv A835 66,6
